[gd_scene load_steps=7 format=3 uid="uid://kmy4njbhv2o4"]

[ext_resource type="Script" path="res://Scripts/Enemy/Enemy.gd" id="1_0ud2g"]
[ext_resource type="Texture2D" uid="uid://dnayr5jysdqed" path="res://Backage/BarHP_SFX ( By Lyn )/icon.svg" id="2_42rp1"]
[ext_resource type="AudioStream" uid="uid://caj23jpngif51" path="res://Backage/BarHP_SFX ( By Lyn )/sfx/mixkit-arcade-retro-game-over-213.wav" id="3_qyit0"]
[ext_resource type="AudioStream" uid="uid://bbx7it0doysg6" path="res://Backage/BarHP_SFX ( By Lyn )/sfx/mixkit-game-treasure-coin-2038.wav" id="4_01vwh"]
[ext_resource type="AudioStream" uid="uid://cvjmnqptimvw8" path="res://Backage/BarHP_SFX ( By Lyn )/sfx/mixkit-failure-arcade-alert-notification-240.wav" id="5_xx3bc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwa8j"]
size = Vector2(202.667, 202.667)

[node name="Panel Heath Enemy Demo" type="Node2D"]
scale = Vector2(1.5, 1.5)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -178.0
offset_top = -175.0
offset_right = 84.0
offset_bottom = -2.0
color = Color(0.611765, 0.541176, 0.27451, 1)
metadata/_edit_use_anchors_ = true

[node name="PlusOneHeath" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.019084
anchor_top = 0.017341
anchor_right = 0.019084
anchor_bottom = 0.017341
offset_left = 115.0
offset_top = 38.0
offset_right = 193.0
offset_bottom = 69.0
focus_mode = 0
text = "+1 Heath"
metadata/_edit_use_anchors_ = true

[node name="MinusOneHeath" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0229008
anchor_right = -0.0229008
offset_left = 24.0
offset_top = 41.0
offset_right = 98.0
offset_bottom = 72.0
focus_mode = 0
text = "-1 Heath"
metadata/_edit_use_anchors_ = true

[node name="Enemy_1_Demo" type="RigidBody2D" parent="." groups=["Enemy"]]
position = Vector2(75.3333, -70.6667)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_0ud2g")

[node name="Sprite" type="Sprite2D" parent="Enemy_1_Demo"]
modulate = Color(1, 0.823529, 0.0392157, 1)
position = Vector2(16, -14.6667)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_42rp1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_1_Demo"]
position = Vector2(16, -14)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_nwa8j")

[node name="HeathBar" type="ProgressBar" parent="Enemy_1_Demo"]
offset_left = -44.0
offset_top = -116.0
offset_right = 75.0
offset_bottom = -89.0
max_value = 10.0
value = 1.0
metadata/_edit_use_anchors_ = true

[node name="DeadSound" type="AudioStreamPlayer" parent="Enemy_1_Demo"]
stream = ExtResource("3_qyit0")

[node name="PlusHeathSound" type="AudioStreamPlayer" parent="Enemy_1_Demo"]
stream = ExtResource("4_01vwh")

[node name="MinusHeathSound" type="AudioStreamPlayer" parent="Enemy_1_Demo"]
stream = ExtResource("5_xx3bc")

[connection signal="pressed" from="ColorRect/PlusOneHeath" to="ColorRect" method="_on_plus_one_heath_pressed" flags=18]
[connection signal="pressed" from="ColorRect/PlusOneHeath" to="Enemy_1_Demo" method="_on_plus_one_heath_pressed"]
[connection signal="pressed" from="ColorRect/MinusOneHeath" to="ColorRect" method="_on_minus_one_heath_pressed" flags=18]
[connection signal="pressed" from="ColorRect/MinusOneHeath" to="Enemy_1_Demo" method="_on_minus_one_heath_pressed"]
[connection signal="value_changed" from="Enemy_1_Demo/HeathBar" to="Enemy_1_Demo" method="_on_heath_bar_value_changed"]
